<resources>

    <string name="app_name">TravelPlanTodo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- ドロワー・メニュー用文字列 -->
    <string name="select_label">選択</string>
    <string name="menu_setting_label">設定</string>
    <string name="menu_addingApplication_label">友達追加申請一覧</string>
    <string name="menu_good_frend_label">親しい友達</string>


    <!-- ログイン画面用文字列 -->
    <string name="login_email_hint">メールアドレス</string>
    <string name="login_pass_hint">パスワード（6文字以上）</string>
    <string name="login_name_hint">表示名</string>
    <string name="login_createbutton_text">アカウント作成</string>

    <string name="login_title">ログイン</string>
    <string name="create_account_failure_message">アカウント作成に失敗しました</string>
    <string name="login_failure_message">ログインに失敗しました</string>
    <string name="login_error_message">正しく入力してください</string>

    <!-- 設定画面用文字列 -->
    <string name="settings_titile">設定</string>
    <string name="change_name_hint">@string/login_name_hint</string>
    <string name="name_text">名前を入力してください</string>
    <string name="id_text">マイID</string>
    <string name="id_error_text">IDは10文字以上で入力してください</string>
    <string name="menu_change_button_label">変更</string>
    <string name="menu_logout_label">ログアウト</string>

    <string name="no_login_user">ログインしていません</string>
    <string name="change_disp_name">変更しました</string>
    <string name="change_disp_myid">変更しました</string>
    <string name="logout_complete_message">ログアウトしました</string>

    <!-- ドロワー・メニュー用文字列 -->
    <string name="genre_select_label">ジャンル選択</string>
    <string name="menu_hobby_label">一覧</string>
    <string name="menu_life_label">設定</string>
    <string name="menu_health_label">健康</string>
    <string name="menu_compter_label">コンピューター</string>

    <!-- 旅行プラン作成文字列 -->
    <string name="title_label">タイトル</string>
    <string name="travel_plan_contents">内容</string>
    <string name="send_button_label">投稿</string>

    <string name="travel_plan_send_title">作成</string>
    <string name="input_title">タイトルを入力してください</string>
    <string name="travel_plan_message">内容を入力してください</string>
    <string name="get_image">画像を取得</string>
    <string name="send_error_message">投稿に失敗しました</string>


    <!-- homeFragment TIMETable文字列 -->
    <string name="time_tabel_label">時間</string>
    <string name="time_tabel_contents">内容</string>
    <string name="time_tabel_Button_label">投稿</string>

    <string name="time_send_title">作成</string>
    <string name="input_time">タイトルを入力してください</string>
    <string name="time_table_message">内容を入力してください</string>
    <string name="time_table_send_error_message">投稿に失敗しました</string>
    <string name="time_table_send_success_message">投稿に成功しました</string>

    <!-- giftFragment TIMETable文字列 -->
    <string name="gift_store_name_label">店舗名</string>
    <string name="gift_name">購入したいおみあげ</string>
    <string name="gift_Button_label">投稿</string>

    <string name="gift_send_title">作成</string>
    <string name="input_gift">タイトルを入力してください</string>
    <string name="gift_message">内容を入力してください</string>
    <string name="gift_send_error_message">投稿に失敗しました</string>
    <string name="gift_send_success_message">投稿に成功しました</string>

    <!-- messageFragment TIMETable文字列 -->
    <string name="message_send_error_message">メッセージの送信に失敗しました</string>

    <!-- settingFragment TIMETable文字列 -->
    <string name="travel_plan_title_setting">旅行プランのタイトルを入力してください</string>
    <string name="travel_plan_content_setting">旅行プランの内容を入力してください</string>


    <!-- MemberSendActivity文字列 -->
    <string name="member_send_error_message">IDを入力してください</string>
    <string name="member_send_error">追加申請に失敗しました</string>
    <string name="member_send_success">追加申請に成功しました</string>
    <string name="good_member_button_label">親しい友もだちから追加する</string>


</resources>
