<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".GiftSendActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gift_store_name_label"
        android:id="@+id/giftStoreNameView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/giftStoreNameTextView"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:layout_below="@+id/giftStoreNameView"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gift_name"
        android:id="@+id/giftNameView"
        android:layout_below="@+id/giftStoreNameTextView"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/giftNameTextView"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:gravity="top"
        android:layout_below="@+id/giftNameView"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_button_label"
        android:id="@+id/giftSendButton"
        android:layout_below="@+id/giftNameTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/giftSendButton"
        android:layout_centerInParent="true"
        android:visibility="gone"/>



</RelativeLayout>