<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".TimetableSendActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_tabel_contents"
        android:id="@+id/timeTableView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/timeTableContent"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:layout_below="@+id/timeTableView"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_tabel_label"
        android:id="@+id/timeTableDateTime"
        android:layout_below="@+id/timeTableContent"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/timeTableDateButtonLinerLayout"
        android:layout_below="@+id/timeTableDateTime"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="日付"
            android:id="@+id/timeTableDateButton"
            android:layout_margin="10dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeTableTimeButton"
            android:layout_margin="10dp"
            android:text="時間"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timeTableDateTimeContent"
        android:inputType="date"
        android:maxLines="10"
        android:gravity="top"
        android:layout_below="@+id/timeTableDateTime"
        android:layout_alignParentStart="true"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_button_label"
        android:id="@+id/timeTableSendButton"
        android:layout_below="@+id/timeTableDateButtonLinerLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeTableSendButton"
        android:layout_centerInParent="true"
        android:visibility="gone"/>



</RelativeLayout>